# tfmxplayxm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md
.github/workflows/: release.yml
XM_OUTPUT/: tfmx_T2_World1_SS0.xm  tfmx_T2_World1_SS2.xm  tfmx_T2_World1_SS3.xm  tfmx_T2_World2_SS2.xm
docs/: index.html
scripts/: analyze_xm_tfmx.py
src/: convert2xm.cpp  convert2xm.h  tfmx.cpp  tfmx.h  tfmxplay.cpp
tools/: check_banner.py  gen_banner.py
